# my-arithmetic-dehou-yasmine

./: .gitignore  .gitlab-ci.yaml  .gitlab-ci.yml  .readthedocs.yaml  README.md  conf.py  index.rst  pyproject.toml
.github/workflows/: build.yaml  deploy.yaml  test.yaml
docs/source/: conf.py  index.rst  modules.rst
src/my_arithmetic_dehou_yasmine/: pgcd.py
tests/: test_pgcd.py
